<resources>
    <string name="app_name">TigerPay</string>
    <string name="jkd_username">tigerpay</string>
    <string name="jkd_password">123456</string>
    <string name="facebook_app_id">1969970279929904</string>
    <string name="please_enter_your_phone_no">Please Enter Your 10 digit mobile number</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="submit">Submit</string>
    <string name="or">Or</string>
    <string name="verification_code">Verification Code</string>
    <string name="back">Back</string>
    <string name="resend">Resend</string>
    <string name="next">Next</string>
    <string name="remaining">Remaining</string>
    <string name="please_type_the_verification_code_sent_to">Please Type the verification code sent to</string>
    <string name="your_current_btc_balance">Your current BTC Balance</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="pan_card_number">Pan Card Number</string>
    <string name="birthdate">Birthdate</string>
    <string name="gender">Gender</string>
    <string name="country">Country</string>
    <string name="account_type">Account Type</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="bank_card">Bank Card</string>
    <string name="adhaar_card">Aadhaar Card</string>
    <string name="Pan_card">Pan Card</string>
    <string name="IFSC">IFSC Code</string>
    <string name="bank_name">Bank Name</string>
    <string name="branch">Branch</string>
    <string name="account_holder_name">Account Holder Name</string>
    <string name="account_no">Account Number</string>
    <string name="confirm_account_no">Confirm Account Number</string>
    <string name="adhaar_card_no">Aadhaar Card Number</string>
    <string name="address">Address1</string>
    <string name="address_new">Address2</string>
    <string name="landmark">LandMark</string>
    <string name="upload_adhaar_card_image">Upload Aadhaar Card Image</string>
    <string name="upload_pan_card_image">Upload Pan Card Image</string>
    <string name="upload_Passbook_or_cheque_image">Upload Passbook or cheque Image</string>
    <string name="recharge">Recharge</string>
    <string name="movies">Movies</string>
    <string name="cab">Cab</string>
    <string name="Flight">Flight</string>
    <string name="withdraw">Withdraw</string>
    <string name="deposit">Deposit</string>
    <string name="description">Description</string>
    <string name="bid">Bid</string>
    <string name="ask">Ask</string>
    <string name="fd">F.D</string>
    <string name="receive">Receive</string>
    <string name="send">Send</string>
    <string name="transaction">Transactions</string>
    <string name="wallet_balance">Wallet Balance</string>
    <string name="transfer">Transfer</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="add_address">Add Bitcoin Address</string>
    <string name="dashboard">Dashboard</string>
    <string name="verification">Verification</string>
    <string name="bitcoin_address">Bitcoin Address</string>
    <string name="bitcoin_address_book">Bitcoin Address Book</string>
    <string name="statement">Statements</string>
    <string name="rate_chart">Rate Chart</string>
    <string name="free_bitcoin">Free Bitcoin</string>
    <string name="setting">Settings</string>
    <string name="sink_refer_code">Refer code</string>
    <string name="sink_list">Sync Contact List</string>
    <string name="quick_help">Quick Help</string>
    <string name="support">Support</string>
    <string name="about_us">About Us</string>
    <string name="notifications">Notifications</string>
    <string name="copy_bitcoin">Copy Address</string>
    <string name="share_bitcoin">Share Address</string>
    <string name="your_bitcoin">Your Bitcoin Address is mentioned above. You can copy, share or scan it.</string>
    <string name="geb">Security</string>
    <string name="notification">Notification</string>
    <string name="change_pin">Change Pin</string>
    <string name="rate_alert">Rate Alert</string>
    <string name="pin_lock">PIN lock</string>
    <string name="lock_outgoing_transaction">Lock outgoing transaction</string>
    <string name="sound_alert">Sound Alert</string>
    <string name="vibrate_alert">Vibrate Alert</string>
    <string name="notification_alert">Notification Alert</string>
    <string name="security">Security</string>
    <string name="you_can_simply_change_your_pin">You can simply change your PIN from here.</string>
    <string name="lock_your_zebpay">Lock your MetaPay app, to unlock use your PIN.</string>
    <string name="you_can_enable_anytime">You can enable outgoing transaction anytime by doing OTP SMS verification.</string>
    <string name="enable_rate_alert">Enable rate alert if rate change more than.</string>
    <string name="play_sound_when">Play sound when there is a notification.</string>
    <string name="vibrate_phone_when_there_is_a_notification">Vibrate phone when there is a notification.</string>
    <string name="finger_print">Finger Print</string>
    <string name="use_fingerprint_for_metapay">Use fingerprint for TigerPay PIN.</string>
    <string name="generate_secure_pin">Generate Secure Pin</string>
    <string name="enter_old_secure_pin">Enter Secure Pin</string>
    <string name="enter_secure_pin">Enter Secure pin</string>
    <string name="reenter_secure_pin">Please Re-Enter Secure Pin</string>
    <string name="old_secure_pin">Enter Old Secure Pin</string>
    <string name="new_secure_pin">Enter New Secure Pin</string>
    <string name="confirm_secure_pin">Confirm New Secure Pin</string>
    <string name="aboutus">Disclaimer: The information contained in this communication is
        intended solely for the use of the individual or entity to whom it is addressed and others authorized to receive it.
        It may contain confidential or legally privileged information. If you are not the intended recipient you are
        hereby notified that any disclosure, copying, distribution or taking any action in reliance on the contents of
        this information is strictly prohibited and may be unlawful. If you have</string>
    <string name="place_bid">Place Bid</string>
    <string name="place_Ask">Place Ask</string>
    <string name="rate">rate</string>
    <string name="amount">amount</string>
    <string name="quantity">quantity</string>
    <string name="confirm_ask">Confirm Asking</string>
    <string name="confirm_bidding">Confirm Bidding</string>
    <string name="reference_id">Reference Number</string>
    <string name="card_holder_number">Card Holder Number</string>
    <string name="cvv">CVV</string>
    <string name="expiry_month">Expiry Month</string>
    <string name="expiry_year">Expiry Year</string>
    <string name="username">Usename</string>
    <string name="prepaid">Prepaid</string>
    <string name="postpaid">Postpaid</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="current_operator">Current Operator</string>
    <string name="register_phone_no">Receiver Phone Number</string>
    <string name="dob">DOB</string>
    <string name="email">Email</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_data_found">No Data Found</string>
    <string name="price">Price : </string>
    <string name="date">Date </string>
    <string name="please_enter_phone_number">Please enter phone number.</string>
    <string name="please_enter_correct_number">Please enter correct number.</string>
    <string name="otp_not_match">Otp is Incorrect, please try again.</string>
    <string name="please_enter_four_digit_secure_pin">Please enter your 4-digit Secure PIN.</string>
    <string name="secure_pin_not_match">Secure pin does not match.</string>
    <string name="incorrect_secure_pin">Incorrect secure pin.</string>
    <string name="please_enter_confirm_password">Please enter confirm password.</string>
    <string name="please_enter_confirm_secure_pin">Please enter confirm secure pin.</string>
    <string name="please_enter_secure_pin">Please enter secure pin.</string>
    <string name="please_enter_first_name">Please enter first name.</string>
    <string name="please_enter_last_name">Please enter last name.</string>
    <string name="please_enter_email">Please enter email.</string>
    <string name="please_enter_valid_email">Please enter valid email.</string>
    <string name="please_enter_dob">Please enter DOB.</string>
    <string name="please_enter_city">Please enter city.</string>
    <string name="please_select_gender">Please enter gender.</string>
    <string name="please_select_Country">Please select country.</string>
    <string name="please_select_state">Please select state.</string>
    <string name="please_select_city">Please select city.</string>
    <string name="please_select_valid_date">Your age must be greater than 18.</string>
    <string name="please_enter_four_digit_old_secure_pin">Please enter four digit old secure pin.</string>
    <string name="please_enter_correct_old_secure_pin">Please enter correct old secure pin.</string>
    <string name="please_enter_four_digits_new_secure_pin">Please enter four digits new secure pin.</string>
    <string name="please_enter_four_digits_confirm_secure_pin">Please enter four digits confirm secure pin.</string>
    <string name="secure_pin_do_not_match">Secure pin do not match.</string>
    <string name="please_enter_pan_card_no">Please enter pan card number.</string>
    <string name="please_enter_valid_pan_card_no">Please enter valid pan card number.</string>
    <string name="please_select_dob">Please select DOB.</string>
    <string name="please_select_pan_card_image">Please select PAN card image.</string>
    <string name="please_select_chequebook_image">Please select cheque book or passbook image.</string>
    <string name="please_enter_ifsc">Please enter IFSC code.</string>
    <string name="please_enter_valid_ifsc">Please enter valid IFSC.</string>
    <string name="please_enter_username">Please enter username.</string>
    <string name="please_enter_bank_name">Please enter bank name.</string>
    <string name="please_enter_branch_name">Please enter branch name.</string>
    <string name="please_select_account_type">Please select account type.</string>
    <string name="Please_enter_account_holder_name">Please enter account holder name.</string>
    <string name="Please_enter_account_number">Please enter account number.</string>
    <string name="Please_enter_correct_account_number">Please enter correct account number.</string>
    <string name="Please_enter_confirm_account_number">Please enter confirm account number.</string>
    <string name="account_number_not_match">Account number does not match confirm account number.</string>
    <string name="Please_pic_aadhar_image">Please pick front aadhaar image.</string>
    <string name="Please_pic_back_aadhar_image">Please pick back aadhaar image.</string>
    <string name="Please_enter_account_holder_number">Please enter account holder number.</string>
    <string name="Please_enter_adhar_number">Please enter aadhaar number.</string>
    <string name="Please_enter_valid_adhar_number">Please enter valid aadhaar number.</string>
    <string name="Please_enter_correct_account_holder_number">Please enter correct account holder number.</string>
    <string name="Please_enter_address_one">Please enter address 1.</string>
    <string name="Please_enter_address_two">Please enter address 2.</string>
    <string name="Please_enter_landmark">Please enter landmark.</string>
    <string name="amount_validation">Insufficient amount.</string>
    <string name="please_enter_reference_no">Please enter reference number.</string>
</resources>