<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_bitcoin_address"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddBitcoinAddress"
    >

    <include layout="@layout/toolbar"
        android:id="@+id/tool"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@+id/tool"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin_x"
        android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/lnList"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_weight=".1"
        android:layout_below="@+id/tool"
        android:gravity="center"
        android:padding="@dimen/margin_x"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/margin_v"
            android:layout_gravity="center"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="12"
                android:hint="@string/register_phone_no"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/margin_v"
            android:layout_gravity="center"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions"
                android:hint="@string/username"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/margin_v"
            android:layout_gravity="center"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions"
                android:hint="@string/bitcoin_address"/>

        </android.support.design.widget.TextInputLayout>


        <TextView
            android:layout_width="wrap_content"
            android:text="Or"
            android:layout_marginTop="@dimen/margin_x"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/black"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/imView"
            android:background="@drawable/qr_scaner"
            android:layout_width="@dimen/image_wight"
            android:layout_marginTop="@dimen/margin_v"
            android:layout_height="@dimen/image_wight" />

    </LinearLayout>

    <TextView
        android:id="@+id/txNext"
        android:layout_below="@+id/lnList"
        android:layout_width="wrap_content"
        android:text="@string/submit"
        android:layout_marginTop="@dimen/margin_x"
        android:padding="@dimen/margin_x"
        android:textAppearance="?android:textAppearanceMedium"
        android:background="@drawable/green_back_button"
        android:textColor="@color/white"
        android:layout_marginBottom="@dimen/margin_x"
        android:layout_height="wrap_content" />

    </LinearLayout>

    </ScrollView>

</RelativeLayout>
