<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_dashboard"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent"
    tools:context="com.app.tigerpay.Dashboard">

    <include layout="@layout/toolbar"
        android:id="@+id/tool"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_above="@+id/lnBottom"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight=".7"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_height="match_parent">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight=".3"
            android:gravity="center"
            android:layout_gravity="end"
            android:orientation="vertical"
            android:background="@color/white"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:layout_marginTop="@dimen/icon_size"
                        android:padding="@dimen/margin_x"
                        android:layout_height="wrap_content">


                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_marginTop="@dimen/margin_x"
                            android:layout_height="wrap_content">

                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textEmailAddress"
                                android:hint="@string/mobile_number"/>

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_marginTop="@dimen/margin_x"
                            android:layout_height="wrap_content">

                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textEmailAddress"
                                android:hint="@string/current_operator"/>

                        </android.support.design.widget.TextInputLayout>



                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_marginTop="@dimen/margin_x"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/edIfsc"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textEmailAddress"
                                android:hint="@string/amount"/>

                        </android.support.design.widget.TextInputLayout>


                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/submit"
                        android:padding="@dimen/margin_x"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:background="@drawable/green_back_button"
                        android:textColor="@color/white"
                        android:layout_marginBottom="@dimen/margin_x"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

    </LinearLayout>

    <android.support.v7.widget.CardView
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_marginTop="@dimen/image_size"
        android:layout_marginLeft="@dimen/margin_x"
        android:layout_marginRight="@dimen/margin_x"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:padding="@dimen/margin_x"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_margin="@dimen/margin_v"
                    android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:text="Your Current balance "
                            android:textColor="@color/black"
                            android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="match_parent"
                            android:text="643,647,00 Rs"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                </LinearLayout>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:text="@string/prepaid"
                        android:layout_height="wrap_content" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:text="@string/postpaid"
                        android:layout_height="wrap_content" />

                </RadioGroup>

            </LinearLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
