<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_dashboard"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent"
    tools:context=".Dashboard">

    <include layout="@layout/toolbar"
        android:id="@+id/tool"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight=".3"
            android:gravity="center"
            android:layout_gravity="end"
            android:layout_below="@+id/tool"
            android:orientation="vertical"
            android:background="@color/white"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/margin_x"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/margin_x"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edReference_no"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"
                        android:inputType="textNoSuggestions"
                        android:hint="@string/reference_id"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/margin_x"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/txdate"
                        android:layout_width="match_parent"
                        android:focusable="false"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:hint="@string/date"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/margin_x"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edAmount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:hint="@string/amount"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_margin="@dimen/margin_x"
                    android:layout_height="wrap_content">

                   <TextView
                       android:id="@+id/tvpath"
                       android:layout_width="match_parent"
                       android:layout_weight=".4"
                       android:text="Receipt path"
                       android:maxLines="3"
                       android:textAppearance="?android:textAppearanceMedium"
                       android:textColor="@color/gray"
                       android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/tvUpload"
                        android:layout_width="match_parent"
                        android:layout_weight=".6"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:padding="@dimen/margin_v"
                        android:background="@drawable/green_back_button"
                        android:text="Upload"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/tvdeposit"
                android:layout_width="wrap_content"
                android:text="@string/deposit"
                android:padding="@dimen/margin_x"
                android:layout_marginTop="@dimen/margin_x"
                android:textAppearance="?android:textAppearanceMedium"
                android:background="@drawable/green_back_button"
                android:textColor="@color/white"
                android:layout_marginBottom="@dimen/margin_x"
                android:layout_height="wrap_content" />

            </LinearLayout>

            </ScrollView>

        </LinearLayout>


</RelativeLayout>
